<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_multithreading"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="xyz.zpayh.agerabus.MultithreadingActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_input"
            android:hint="@string/hint_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:text="@string/posting"
        android:id="@+id/tv_posting"
        android:layout_below="@+id/til_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/main"
        android:id="@+id/tv_main"
        android:layout_below="@+id/tv_posting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/background"
        android:id="@+id/tv_background"
        android:layout_below="@+id/tv_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/async"
        android:id="@+id/tv_async"
        android:layout_below="@+id/tv_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <Button
        android:layout_centerInParent="true"
        android:id="@+id/bt_send"
        android:text="@string/send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</RelativeLayout>
