<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_priority"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="xyz.zpayh.agerabus.PriorityActivity">
    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_input"
            android:hint="@string/hint_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:text="@string/priority_10"
        android:id="@+id/tv_priority_10"
        android:layout_below="@+id/til_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/priority_20"
        android:id="@+id/tv_priority_20"
        android:layout_below="@+id/tv_priority_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/priority_15"
        android:id="@+id/tv_priority_15"
        android:layout_below="@+id/tv_priority_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/priority_5"
        android:id="@+id/tv_priority_5"
        android:layout_below="@+id/tv_priority_15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


        <Button
            android:layout_centerInParent="true"
            android:id="@+id/bt_send"
            android:text="@string/send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
</RelativeLayout>
